fixed overflow bugs

--- a/src/components/aboutPage/aboutPage.scss
+++ b/src/components/aboutPage/aboutPage.scss
@@ -15,7 +15,7 @@
         align-items: center;
         max-width: 40rem;
         margin-right: 1rem;
-        animation: 4s ease-out 0s 1 fadeInFromLeft;
+        animation: 3s ease-out 0s 1 fadeInFromLeft;
         
         h2 {
             font-family: "AndyBold";
@@ -29,7 +29,7 @@
 
 
     a {
-        animation: 3s ease-out 0s 1 fadeInFromRight;
+        animation: 4s ease-out 0s 1 fadeInFromRight;
         width: 65rem;
         margin-left: 1rem;
 
