--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -2,6 +2,7 @@
     margin-right: 0.5rem;
     font-family: 'AndyBold';
     font-size: 24px;
+    overflow: hidden;
     
     svg {
         height: auto;
@@ -40,10 +41,10 @@
     ul {
         list-style: none;
         overflow: hidden;
-        // position: absolute;
         margin-top: 0.5rem;
         max-height: 400px;
         margin-bottom: 3rem;
+        overflow: hidden;
 
         transition: 5s all;
         &.hide {
