--- a/src/components/mainPage/mainPage.scss
+++ b/src/components/mainPage/mainPage.scss
@@ -3,7 +3,7 @@
 .mainPage {
     display: flex;
     align-items: center;
-    overflow: hidden;
+    // overflow: hidden;
 
     @media only screen and (max-width: 701px) {
         flex-direction: column;
@@ -124,7 +124,7 @@
 
 .content-container {
     display: flex;
-    overflow: hidden;
+    // overflow: hidden;
 
     @media only screen and (min-width: 700px){
         // computer screen
