--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -8,7 +8,7 @@
         border: #80808054 1px solid;
         opacity: 85%;
         font-family: 'AndyBold';
-        font-size: 18px;
+        font-size: 24px;
         
         transition: all 250ms;
         &:hover {
